capstone/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ptc-monitor-pod
  labels:
    app: ptc-monitor

spec:
  containers:
  - name: ptc-monitor
    image: yashkanawade03/ptc-monitor:1.0.0
    ports:
    - containerPort: 8080
