capstone/k8s/full-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ptc-monitor
  namespace: development   
  labels:
    app: ptc-monitor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ptc-monitor
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ptc-monitor
    spec:
      containers:
      - name: ptc-monitor
        volumeMounts:
        - name: data-volume
          mountPath: /app/data
        image: yashkanawade03/ptc-monitor:1.0.0
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          httpGet: 
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: ptc-monitor-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: ptc-monitor-service
  namespace: development   
spec:
  selector:
    app: ptc-monitor
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
