capstone/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ptc-monitor-service
spec:
  selector:
    app: ptc-monitor
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: NodePort
