capstone/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ptc-monitor-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ptc-monitor.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ptc-monitor-service
            port:
              number: 80
